Added minification, added a new grunt task to copy variables.less on the first launch

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "homepage": "",
   "devDependencies": {
     "grunt": "*",
-    "grunt-contrib-clean": "*",
+    "grunt-contrib-cssmin": "*",
     "grunt-contrib-watch": "*",
-    "grunt-contrib-less": "*"
+    "grunt-contrib-less": "*",
+    "grunt-contrib-copy": "*"
   }
 }
